# api/models/blog_post.go
@@ -1,0 +1,16 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type BlogPost struct {
+	gorm.Model
+
+	Title  string `gorm:"column:title;size:200;not null;"`
+	Body   string `gorm:"column:body;not null;"`
+	UserID uint   `gorm:"column:user_id;not null;"`
+	User   User   `gorm:"foreignKey:UserID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
+}
+
+type Posts []BlogPost
